// Version
syntax = "proto3";

// Package name
option go_package = "github.com/Rayato159/hello-sekai-shop-tutorial";

// Structures
message IsAvailableToSellReq {
    string playerId = 1;
    string itemId = 2;
}

message IsAvailableToSellRes {
    bool isAvailable = 1;
}

// Methods
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes) {}
}